# idris-perl6

./: .travis.yml  Dockerfile  README.md  idris-perl6.cabal
examples/: Fibonacci.idr  pythag.idr  test.idr
src/: Main.hs
src/IRTS/: CodegenPerl6.hs
